@@ -1,5 +1,6 @@
 package uk.gov.hmcts.reform.pip.account.management;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import io.restassured.response.Response;
 import org.json.JSONObject;
@@ -11,7 +12,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestMethodOrder;
 import uk.gov.hmcts.reform.pip.account.management.model.account.AzureAccount;
 import uk.gov.hmcts.reform.pip.account.management.model.account.PiUser;
-import uk.gov.hmcts.reform.pip.account.management.utils.FunctionalTestBase;
+import uk.gov.hmcts.reform.pip.account.management.utils.AccountHelperBase;
 import uk.gov.hmcts.reform.pip.model.account.Roles;
 import uk.gov.hmcts.reform.pip.model.account.UserProvenances;
 
@@ -20,15 +21,17 @@ import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ThreadLocalRandom;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
 import static org.springframework.http.HttpStatus.NO_CONTENT;
 import static org.springframework.http.HttpStatus.OK;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.INTERNAL_ADMIN_CTSC;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
-class InactiveAccountsManagementTest extends FunctionalTestBase {
+class InactiveAccountsManagementTest extends AccountHelperBase {
     private static final String TEST_NAME = "E2E Account Management Test Name";
     private static final Integer TEST_EMAIL_RANDOM_NUMBER =
         ThreadLocalRandom.current().nextInt(1000, 9999);
@@ -51,27 +54,19 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
     private static final String FIRST_NAME = "E2E Account Management";
     private static final String SURNAME = "Test Name";
     private static final String LAST_SINGED_IN_DATE = "lastSignedInDate";
-    private static final String ISSUER_ID = "x-issuer-id";
     private static final Clock CL = Clock.systemUTC();
     private static final String IDAM_USER_PROVENANCE_ID = UUID.randomUUID().toString();
     private Map<String, String> issuerId;
+    private Map<String, String> ctscAdminIssuerId;
+    private Map<String, String> systemAdminAuthHeaders;
     private String mediaUserProvenanceId;
     private String adminProvenanceId;
     private String mediaUserId;
     private String adminUserId;
     private String idamUserId;
 
-    private static final String ACCOUNT_URL = "/account";
-    private static final String UPDATE_USER_INFO = ACCOUNT_URL + "/provenance";
-    private static final String NOTIFY_INACTIVE_MEDIA_ACCOUNT = ACCOUNT_URL + "/media/inactive/notify";
-    private static final String DELETE_INACTIVE_MEDIA_ACCOUNT = ACCOUNT_URL + "/media/inactive";
-    private static final String DELETE_INACTIVE_ADMIN_ACCOUNT = ACCOUNT_URL + "/admin/inactive";
-    private static final String NOTIFY_INACTIVE_IDAM_ACCOUNT = ACCOUNT_URL + "/idam/inactive/notify";
-    private static final String DELETE_INACTIVE_IDAM_ACCOUNT = ACCOUNT_URL + "/idam/inactive";
-    private static final String ADD_SYSTEM_ADMIN_URL = ACCOUNT_URL + "/system-admin";
-
     @BeforeAll
-    public void startUp() {
+    public void startUp() throws JsonProcessingException {
 
         String requestBody = """
             {
@@ -84,22 +79,30 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
 
         String userId =  doPostRequest(CREATE_SYSTEM_ADMIN_SSO, bearer, requestBody)
             .jsonPath().getString("userId");
-        issuerId = Map.of(ISSUER_ID, userId);
-
-        //ADD MEDIA USER
-        AzureAccount mediaUserAzureAccount = createAzureAccount(TEST_EMAIL, Roles.VERIFIED);
-        mediaUserProvenanceId = mediaUserAzureAccount.getAzureAccountId();
-        mediaUserId = createUser(TEST_EMAIL, mediaUserAzureAccount.getAzureAccountId(),
-                                   Roles.VERIFIED, UserProvenances.PI_AAD);
+        issuerId = Map.of(REQUESTER_ID_HEADER, userId);
 
         //ADD SYSTEM ADMIN
         PiUser systemAdminAccount = createSystemAdminAccount(TEST_ADMIN_EMAIL);
         adminProvenanceId = systemAdminAccount.getProvenanceUserId();
         adminUserId = systemAdminAccount.getUserId().toString();
 
+        String ctscAdminId = getCreatedAccountUserId(
+            createAccount(generateEmail(), UUID.randomUUID().toString(), INTERNAL_ADMIN_CTSC, adminUserId));
+        ctscAdminIssuerId = Map.of(REQUESTER_ID_HEADER, ctscAdminId);
+
         //ADD IDAM USER
         idamUserId = createUser(TEST_IDAM_EMAIL, IDAM_USER_PROVENANCE_ID,
-                   Roles.VERIFIED, UserProvenances.CFT_IDAM);
+                                Roles.VERIFIED, UserProvenances.CFT_IDAM);
+
+        //ADD MEDIA USER
+        AzureAccount mediaUserAzureAccount = createAzureAccount();
+        mediaUserProvenanceId = mediaUserAzureAccount.getAzureAccountId();
+        mediaUserId = createUser(TEST_EMAIL, mediaUserAzureAccount.getAzureAccountId(),
+                                 Roles.VERIFIED, UserProvenances.PI_AAD);
+
+        systemAdminAuthHeaders = new ConcurrentHashMap<>(bearer);
+        systemAdminAuthHeaders.putAll(issuerId);
+
     }
 
     @AfterAll
@@ -110,7 +113,7 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
         doDeleteRequest(TESTING_SUPPORT_DELETE_ACCOUNT_URL + TEST_SYSTEM_ADMIN_EMAIL, bearer);
     }
 
-    private AzureAccount createAzureAccount(String email, Roles role) {
+    private AzureAccount createAzureAccount() {
         String requestBody = """
             [
                 {
@@ -121,10 +124,10 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
                     "displayName": "%s"
                 }
             ]
-            """.formatted(email, FIRST_NAME, SURNAME, role, TEST_NAME);
+            """.formatted(TEST_EMAIL, FIRST_NAME, SURNAME, Roles.VERIFIED, TEST_NAME);
 
 
-        Response response = doPostRequestForB2C(CREATE_AZURE_ACCOUNT, bearer, issuerId, requestBody);
+        Response response = doPostRequestForB2C(CREATE_AZURE_ACCOUNT, bearer, ctscAdminIssuerId, requestBody);
         List<AzureAccount> azureAccountList = objectMapper.convertValue(
             response.jsonPath().getJsonObject("CREATED_ACCOUNTS"),
             new TypeReference<>() {
@@ -132,7 +135,7 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
         );
         assertThat(azureAccountList.size()).isEqualTo(1);
 
-        return azureAccountList.get(0);
+        return azureAccountList.getFirst();
     }
 
     private PiUser createSystemAdminAccount(String email) {
@@ -146,7 +149,7 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
             """.formatted(email, FIRST_NAME, SURNAME, UUID.randomUUID());
 
 
-        Response response = doPostRequestForB2C(ADD_SYSTEM_ADMIN_URL, bearer, issuerId, requestBody);
+        Response response = doPostRequestForB2C(CREATE_SYSTEM_ADMIN_SSO, bearer, issuerId, requestBody);
         PiUser piUser = response.getBody().as(PiUser.class);
         assertThat(response.getStatusCode()).isEqualTo(OK.value());
 
@@ -166,14 +169,14 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
             ]
             """.formatted(email, provenancesId, role, provenances);
 
-        Response postResponse = doPostRequestForB2C(CREATE_PI_ACCOUNT, bearer, issuerId, requestBody);
+        Response postResponse = doPostRequestForB2C(CREATE_PI_ACCOUNT, bearer, ctscAdminIssuerId, requestBody);
         List<UUID> piUsersList = objectMapper.convertValue(
             postResponse.jsonPath().getJsonObject("CREATED_ACCOUNTS"),
             new TypeReference<>() {
             }
         );
         assertThat(piUsersList.size()).isEqualTo(1);
-        return piUsersList.get(0).toString();
+        return piUsersList.getFirst().toString();
     }
 
     void updateUserAccountLastVerifiedDate(String userProvenancesId, UserProvenances userProvenances,
@@ -212,7 +215,7 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
         assertThat(response.getStatusCode()).isEqualTo(NO_CONTENT.value());
 
         final Response getPiUserResponse = doGetRequest(String.format(GET_BY_USER_ID, mediaUserId),
-                                                             bearer);
+                                                        systemAdminAuthHeaders);
         assertThat(getPiUserResponse.getStatusCode()).isEqualTo(NOT_FOUND.value());
     }
 
@@ -228,7 +231,7 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
         Response response = doDeleteRequest(DELETE_INACTIVE_ADMIN_ACCOUNT, bearer);
         assertThat(response.getStatusCode()).isEqualTo(NO_CONTENT.value());
         final Response getPiUserResponse = doGetRequest(String.format(GET_BY_USER_ID, adminUserId),
-                                                        bearer);
+                                                        systemAdminAuthHeaders);
         assertThat(getPiUserResponse.getStatusCode()).isEqualTo(NOT_FOUND.value());
     }
 
@@ -257,7 +260,7 @@ class InactiveAccountsManagementTest extends FunctionalTestBase {
         Response response = doDeleteRequest(DELETE_INACTIVE_IDAM_ACCOUNT, bearer);
         assertThat(response.getStatusCode()).isEqualTo(NO_CONTENT.value());
         final Response getPiUserResponse = doGetRequest(String.format(GET_BY_USER_ID, idamUserId),
-                                                        bearer);
+                                                        systemAdminAuthHeaders);
         assertThat(getPiUserResponse.getStatusCode()).isEqualTo(NOT_FOUND.value());
     }
 
