@@ -7,6 +7,7 @@ import com.microsoft.graph.models.UserCollectionResponse;
 import com.microsoft.graph.serviceclient.GraphServiceClient;
 import com.microsoft.graph.users.UsersRequestBuilder;
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
+import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
@@ -20,12 +21,14 @@ import org.springframework.test.web.servlet.MvcResult;
 import org.testcontainers.shaded.org.apache.commons.io.IOUtils;
 import uk.gov.hmcts.reform.pip.account.management.model.account.CreationEnum;
 import uk.gov.hmcts.reform.pip.account.management.model.errored.ErroredAzureAccount;
+import uk.gov.hmcts.reform.pip.account.management.service.authorisation.AccountAuthorisationService;
 import uk.gov.hmcts.reform.pip.account.management.utils.IntegrationTestBase;
 
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -36,6 +39,7 @@ import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.multipart;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
+@Slf4j
 @AutoConfigureEmbeddedDatabase(type = AutoConfigureEmbeddedDatabase.DatabaseType.POSTGRES)
 @DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_EACH_TEST_METHOD)
 @WithMockUser(username = "admin", authorities = {"APPROLE_api.request.admin"})
@@ -43,8 +47,8 @@ class BulkAccountCreationTest extends IntegrationTestBase {
     private static final String ROOT_URL = "/account";
     private static final String BULK_UPLOAD = ROOT_URL + "/media-bulk-upload";
 
-    private static final String ISSUER_ID = "1234-1234-1234-1234";
-    private static final String ISSUER_HEADER = "x-issuer-id";
+    private static final UUID REQUESTER_ID = UUID.randomUUID();
+    private static final String REQUESTER_ID_HEADER = "x-requester-id";
     private static final String MEDIA_LIST = "mediaList";
     private static final String GIVEN_NAME = "Given Name";
 
@@ -63,6 +67,9 @@ class BulkAccountCreationTest extends IntegrationTestBase {
     @Mock
     private UsersRequestBuilder usersRequestBuilder;
 
+    @MockitoBean
+    private AccountAuthorisationService accountAuthorisationService;
+
     @BeforeEach
     void setup() {
         User user = new User();
@@ -80,6 +87,8 @@ class BulkAccountCreationTest extends IntegrationTestBase {
         userCollectionResponse.setValue(new ArrayList<>());
 
         when(usersRequestBuilder.get(any())).thenReturn(userCollectionResponse);
+
+        when(accountAuthorisationService.userCanBulkCreateMediaAccounts(any())).thenReturn(true);
     }
 
     @Test
@@ -91,7 +100,7 @@ class BulkAccountCreationTest extends IntegrationTestBase {
             MockMultipartFile multipartFile = new MockMultipartFile(MEDIA_LIST, IOUtils.toByteArray(inputStream));
 
             MvcResult mvcResult = mockMvc.perform(multipart(BULK_UPLOAD).file(multipartFile)
-                                                      .header(ISSUER_HEADER, ISSUER_ID))
+                                                      .header(REQUESTER_ID_HEADER, REQUESTER_ID))
                 .andExpect(status().isOk()).andReturn();
             Map<CreationEnum, List<?>> users = OBJECT_MAPPER.readValue(
                 mvcResult.getResponse().getContentAsString(),
@@ -113,7 +122,7 @@ class BulkAccountCreationTest extends IntegrationTestBase {
             MockMultipartFile multipartFile = new MockMultipartFile(MEDIA_LIST, IOUtils.toByteArray(inputStream));
 
             MvcResult mvcResult = mockMvc.perform(multipart(BULK_UPLOAD).file(multipartFile)
-                                                      .header(ISSUER_HEADER, ISSUER_ID))
+                                                      .header(REQUESTER_ID_HEADER, REQUESTER_ID))
                 .andExpect(status().isOk()).andReturn();
             Map<CreationEnum, List<?>> users = OBJECT_MAPPER.readValue(
                 mvcResult.getResponse().getContentAsString(),
@@ -125,11 +134,11 @@ class BulkAccountCreationTest extends IntegrationTestBase {
             assertEquals(1, users.get(CreationEnum.ERRORED_ACCOUNTS).size(), MAP_SIZE_MESSAGE);
 
             ErroredAzureAccount returnedInvalidAccount = OBJECT_MAPPER.convertValue(
-                users.get(CreationEnum.ERRORED_ACCOUNTS).get(0), ErroredAzureAccount.class
+                users.get(CreationEnum.ERRORED_ACCOUNTS).getFirst(), ErroredAzureAccount.class
             );
 
             assertEquals("Account has been successfully created, however email has failed to send.",
-                         returnedInvalidAccount.getErrorMessages().get(0), "Message error does not match");
+                         returnedInvalidAccount.getErrorMessages().getFirst(), "Message error does not match");
         }
     }
 
@@ -139,7 +148,8 @@ class BulkAccountCreationTest extends IntegrationTestBase {
             .getResourceAsStream("csv/invalidCsv.txt")) {
             MockMultipartFile csvFile = new MockMultipartFile(MEDIA_LIST, inputStream);
 
-            MvcResult result = mockMvc.perform(multipart(BULK_UPLOAD).file(csvFile).header(ISSUER_HEADER, ISSUER_ID))
+            MvcResult result = mockMvc
+                .perform(multipart(BULK_UPLOAD).file(csvFile).header(REQUESTER_ID_HEADER, REQUESTER_ID))
                 .andExpect(status().isBadRequest()).andReturn();
 
             assertTrue(
@@ -158,7 +168,7 @@ class BulkAccountCreationTest extends IntegrationTestBase {
             MockMultipartFile multipartFile = new MockMultipartFile(MEDIA_LIST, IOUtils.toByteArray(inputStream));
 
             MvcResult mvcResult = mockMvc.perform(multipart(BULK_UPLOAD).file(multipartFile)
-                                                      .header(ISSUER_HEADER, ISSUER_ID))
+                                                      .header(REQUESTER_ID_HEADER, REQUESTER_ID))
                 .andExpect(status().isOk()).andReturn();
             Map<CreationEnum, List<?>> users = OBJECT_MAPPER.readValue(
                 mvcResult.getResponse().getContentAsString(),
@@ -178,7 +188,7 @@ class BulkAccountCreationTest extends IntegrationTestBase {
             MockMultipartFile multipartFile = new MockMultipartFile(MEDIA_LIST, IOUtils.toByteArray(inputStream));
 
             MvcResult mvcResult = mockMvc.perform(multipart(BULK_UPLOAD).file(multipartFile)
-                                                      .header(ISSUER_HEADER, ISSUER_ID))
+                                                      .header(REQUESTER_ID_HEADER, REQUESTER_ID))
                 .andExpect(status().isOk()).andReturn();
             Map<CreationEnum, List<?>> users = OBJECT_MAPPER.readValue(
                 mvcResult.getResponse().getContentAsString(),
