@@ -5,6 +5,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.microsoft.applicationinsights.web.dependencies.apachecommons.io.IOUtils;
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -15,6 +16,7 @@ import org.springframework.http.MediaType;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.annotation.DirtiesContext;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.context.jdbc.Sql;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
@@ -25,6 +27,7 @@ import uk.gov.hmcts.reform.pip.account.management.model.subscription.Subscriptio
 import uk.gov.hmcts.reform.pip.account.management.model.subscription.usersubscription.CaseSubscription;
 import uk.gov.hmcts.reform.pip.account.management.model.subscription.usersubscription.LocationSubscription;
 import uk.gov.hmcts.reform.pip.account.management.model.subscription.usersubscription.UserSubscription;
+import uk.gov.hmcts.reform.pip.account.management.service.authorisation.SubscriptionAuthorisationService;
 import uk.gov.hmcts.reform.pip.account.management.utils.IntegrationTestBase;
 import uk.gov.hmcts.reform.pip.model.account.PiUser;
 import uk.gov.hmcts.reform.pip.model.account.Roles;
@@ -46,6 +49,8 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 import static org.springframework.http.HttpStatus.BAD_REQUEST;
 import static org.springframework.http.HttpStatus.FORBIDDEN;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
@@ -130,7 +135,7 @@ class SubscriptionTest extends IntegrationTestBase {
     private static final String ACTIONING_USER_ID = "87f907d2-eb28-42cc-b6e1-ae2b03f7bba5";
     private static final String INVALID_ACTIONING_USER_ID = "87f907d2-eb28-42cc-b6e1-ae2b03f7bba6";
     private static final String SYSTEM_ADMIN_USER_ID = "87f907d2-eb28-42cc-b6e1-ae2b03f7bba4";
-    private static final String USER_ID_HEADER = "x-user-id";
+    private static final String REQUESTER_ID_HEADER = "x-requester-id";
     private static final String TEST_EMAIL = "test-email-cath@justice.gov.uk";
     private static final Subscription SUBSCRIPTION = new Subscription();
 
@@ -138,6 +143,9 @@ class SubscriptionTest extends IntegrationTestBase {
     private static PiUser verifiedUser = new PiUser();
 
     private static String rawArtefact;
+
+    @MockitoBean
+    private SubscriptionAuthorisationService subscriptionAuthorisationService;
 
     @Autowired
     private MockMvc mvc;
@@ -159,6 +167,16 @@ class SubscriptionTest extends IntegrationTestBase {
         }
     }
 
+    @BeforeEach
+    public void setupEach() {
+        when(subscriptionAuthorisationService.userCanAddSubscriptions(any(), any())).thenReturn(true);
+        when(subscriptionAuthorisationService.userCanDeleteSubscriptions(any(), any())).thenReturn(true);
+        when(subscriptionAuthorisationService.userCanViewSubscriptions(any(), any())).thenReturn(true);
+        when(subscriptionAuthorisationService.userCanBulkDeleteSubscriptions(any(), any())).thenReturn(true);
+        when(subscriptionAuthorisationService.userCanUpdateSubscriptions(any(), any())).thenReturn(true);
+    }
+
+
     protected MockHttpServletRequestBuilder setupMockSubscription(String searchValue) throws JsonProcessingException {
         SUBSCRIPTION.setSearchValue(searchValue);
         SUBSCRIPTION.setLocationName(LOCATION_NAME);
@@ -170,28 +188,36 @@ class SubscriptionTest extends IntegrationTestBase {
 
         return MockMvcRequestBuilders.post(SUBSCRIPTION_PATH)
             .content(OBJECT_MAPPER.writeValueAsString(SUBSCRIPTION))
-            .header(USER_ID_HEADER, ACTIONING_USER_ID)
+            .header(REQUESTER_ID_HEADER, ACTIONING_USER_ID)
             .contentType(MediaType.APPLICATION_JSON);
     }
 
     protected MockHttpServletRequestBuilder setupMockSubscription(String searchValue, SearchType searchType,
                                                                   UUID userId)
         throws JsonProcessingException {
-
         SUBSCRIPTION.setUserId(userId);
         SUBSCRIPTION.setSearchType(searchType);
         return setupMockSubscription(searchValue);
     }
 
-    protected MockHttpServletRequestBuilder setupMockSubscription(String searchValue, SearchType searchType,
-                                                                  UUID userId, String caseNumber, String caseUrn)
+    protected MockHttpServletRequestBuilder setupMockSubscription(String caseNumber, String caseUrn)
         throws JsonProcessingException {
-
+        SUBSCRIPTION.setUserId(VALID_USER_ID);
+        SUBSCRIPTION.setSearchType(SearchType.CASE_ID);
         SUBSCRIPTION.setCaseNumber(caseNumber);
         SUBSCRIPTION.setUrn(caseUrn);
-        return setupMockSubscription(searchValue, searchType, userId);
+        return setupMockSubscription(CASE_ID);
 
     }
+
+    protected MockHttpServletRequestBuilder setupMockSubscriptionWithListType()
+
+        throws JsonProcessingException {
+        SUBSCRIPTION.setUserId(VALID_USER_ID);
+        SUBSCRIPTION.setSearchType(SearchType.LOCATION_ID);
+        return setupMockSubscription(LOCATION_ID);
+    }
+
 
     protected MockHttpServletRequestBuilder getSubscriptionByUuid(String searchValue) {
         return get(SUBSCRIPTION_PATH + '/' + searchValue);
@@ -200,7 +226,7 @@ class SubscriptionTest extends IntegrationTestBase {
     protected MockHttpServletRequestBuilder setupRawJsonSubscription(String json) {
         return MockMvcRequestBuilders.post(SUBSCRIPTION_PATH)
             .content(json)
-            .header(USER_ID_HEADER, ACTIONING_USER_ID)
+            .header(REQUESTER_ID_HEADER, ACTIONING_USER_ID)
             .contentType(MediaType.APPLICATION_JSON);
     }
 
@@ -246,6 +272,7 @@ class SubscriptionTest extends IntegrationTestBase {
         @Test
         @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
         void testUnauthorizedCreateSubscription() throws Exception {
+            when(subscriptionAuthorisationService.userCanAddSubscriptions(any(), any())).thenReturn(false);
             MockHttpServletRequestBuilder mappedSubscription = setupMockSubscription(LOCATION_ID);
 
             assertRequestResponseStatus(mvc, get(String.format("/subscription/%s", UUID.randomUUID())),
@@ -264,7 +291,7 @@ class SubscriptionTest extends IntegrationTestBase {
             Subscription returnedSubscription = createdAndExtractSubscription(ACTIONING_USER_ID);
 
             MvcResult deleteResponse = mvc.perform(delete(SUBSCRIPTION_BASE_URL + returnedSubscription.getId())
-                                                       .header(USER_ID_HEADER, userId))
+                                                       .header(REQUESTER_ID_HEADER, userId))
                 .andExpect(status().isOk())
                 .andReturn();
 
@@ -281,8 +308,9 @@ class SubscriptionTest extends IntegrationTestBase {
         void testDeleteSubscriptionByIdReturnsForbiddenIfUserMismatched() throws Exception {
             Subscription returnedSubscription = createdAndExtractSubscription(UUID_STRING.toString());
 
+            when(subscriptionAuthorisationService.userCanDeleteSubscriptions(any(), any())).thenReturn(false);
             mvc.perform(delete(SUBSCRIPTION_BASE_URL + returnedSubscription.getId())
-                            .header(USER_ID_HEADER, INVALID_ACTIONING_USER_ID))
+                            .header(REQUESTER_ID_HEADER, INVALID_ACTIONING_USER_ID))
                 .andExpect(status().isForbidden());
         }
 
@@ -290,7 +318,7 @@ class SubscriptionTest extends IntegrationTestBase {
         @Test
         void failToDeleteSubscriptionWhenDoesNotExist() throws Exception {
             MvcResult response = mvc.perform(delete(SUBSCRIPTION_BASE_URL + UUID_STRING)
-                                                 .header(USER_ID_HEADER, ACTIONING_USER_ID))
+                                                 .header(REQUESTER_ID_HEADER, ACTIONING_USER_ID))
                 .andExpect(status().isNotFound()).andReturn();
             assertNotNull(response.getResponse().getContentAsString(), VALIDATION_EMPTY_RESPONSE);
 
@@ -316,8 +344,9 @@ class SubscriptionTest extends IntegrationTestBase {
         void testUnauthorizedDeleteById() throws Exception {
             Subscription returnedSubscription = createdAndExtractSubscription(ACTIONING_USER_ID);
 
+            when(subscriptionAuthorisationService.userCanDeleteSubscriptions(any(), any())).thenReturn(false);
             MvcResult mvcResult = mvc.perform(delete(SUBSCRIPTION_BASE_URL + returnedSubscription.getId())
-                                                  .header(USER_ID_HEADER, SYSTEM_ADMIN_USER_ID)
+                                                  .header(REQUESTER_ID_HEADER, SYSTEM_ADMIN_USER_ID)
                                                   .with(user(UNAUTHORIZED_USERNAME).authorities(
                                                       new SimpleGrantedAuthority(UNAUTHORIZED_ROLE))))
                 .andExpect(status().isForbidden()).andReturn();
@@ -351,7 +380,7 @@ class SubscriptionTest extends IntegrationTestBase {
             MvcResult deleteResponse = mvc.perform(delete(DELETE_BULK_SUBSCRIPTION_PATH)
                                                        .contentType(MediaType.APPLICATION_JSON)
                                                        .content(subscriptionIdRequest)
-                                                       .header(USER_ID_HEADER, userId))
+                                                       .header(REQUESTER_ID_HEADER, userId))
                 .andExpect(status().isOk())
                 .andReturn();
 
@@ -381,28 +410,15 @@ class SubscriptionTest extends IntegrationTestBase {
             String subscriptionIdRequest = OPENING_BRACKET + caseSubscriptionId + DOUBLE_QUOTE_COMMA
                 + locationSubscriptionId + CLOSING_BRACKET;
 
+            when(subscriptionAuthorisationService.userCanBulkDeleteSubscriptions(any(), any())).thenReturn(false);
             MvcResult response = mvc.perform(delete(DELETE_BULK_SUBSCRIPTION_PATH)
                                                  .contentType(MediaType.APPLICATION_JSON)
                                                  .content(subscriptionIdRequest)
-                                                 .header(USER_ID_HEADER, INVALID_ACTIONING_USER_ID))
+                                                 .header(REQUESTER_ID_HEADER, INVALID_ACTIONING_USER_ID))
                 .andExpect(status().isForbidden())
                 .andReturn();
 
             assertEquals(FORBIDDEN.value(), response.getResponse().getStatus(), FORBIDDEN_STATUS_CODE);
-        }
-
-        @Test
-        void testBulkDeletedSubscribersReturnsNotFound() throws Exception {
-            String subscriptionIdRequest = OPENING_BRACKET + UUID_STRING + CLOSING_BRACKET;
-
-            MvcResult response = mvc.perform(delete(DELETE_BULK_SUBSCRIPTION_PATH)
-                                                 .contentType(MediaType.APPLICATION_JSON)
-                                                 .content(subscriptionIdRequest)
-                                                 .header(USER_ID_HEADER, ACTIONING_USER_ID))
-                .andExpect(status().isNotFound()).andReturn();
-
-            assertEquals(NOT_FOUND.value(), response.getResponse().getStatus(),
-                         NOT_FOUND_STATUS_CODE);
         }
 
         @Test
@@ -412,7 +428,7 @@ class SubscriptionTest extends IntegrationTestBase {
             MvcResult response = mvc.perform(delete(DELETE_BULK_SUBSCRIPTION_PATH)
                                                  .contentType(MediaType.APPLICATION_JSON)
                                                  .content(subscriptionIdRequest)
-                                                 .header(USER_ID_HEADER, ACTIONING_USER_ID))
+                                                 .header(REQUESTER_ID_HEADER, ACTIONING_USER_ID))
                 .andExpect(status().isNotFound()).andReturn();
 
             assertEquals(NOT_FOUND.value(), response.getResponse().getStatus(), NOT_FOUND_STATUS_CODE);
@@ -423,10 +439,11 @@ class SubscriptionTest extends IntegrationTestBase {
         void testUnauthorizedBulkDeleteSubscription() throws Exception {
             String subscriptionIdRequest = OPENING_BRACKET + UUID_STRING + CLOSING_BRACKET;
 
+            when(subscriptionAuthorisationService.userCanBulkDeleteSubscriptions(any(), any())).thenReturn(false);
             MvcResult response = mvc.perform(delete(DELETE_BULK_SUBSCRIPTION_PATH)
                                                  .contentType(MediaType.APPLICATION_JSON)
                                                  .content(subscriptionIdRequest)
-                                                 .header(USER_ID_HEADER, ACTIONING_USER_ID))
+                                                 .header(REQUESTER_ID_HEADER, ACTIONING_USER_ID))
                 .andExpect(status().isForbidden()).andReturn();
 
             assertEquals(FORBIDDEN.value(), response.getResponse().getStatus(), FORBIDDEN_STATUS_CODE);
@@ -500,12 +517,12 @@ class SubscriptionTest extends IntegrationTestBase {
                 VALIDATION_SUBSCRIPTION_LIST
             );
 
-            LocationSubscription location = userSubscriptions.getLocationSubscriptions().get(0);
+            LocationSubscription location = userSubscriptions.getLocationSubscriptions().getFirst();
             assertEquals(LOCATION_NAME, location.getLocationName(), VALIDATION_LOCATION_NAME);
             assertEquals(DATE_ADDED.withNano(0), location.getDateAdded().withNano(0),
                          VALIDATION_DATE_ADDED);
 
-            CaseSubscription caseSubscription = userSubscriptions.getCaseSubscriptions().get(0);
+            CaseSubscription caseSubscription = userSubscriptions.getCaseSubscriptions().getFirst();
             assertEquals(CASE_NAME, caseSubscription.getCaseName(), VALIDATION_CASE_NAME);
             assertEquals(CASE_ID, caseSubscription.getCaseNumber(), VALIDATION_CASE_ID);
             assertEquals(CASE_URN, caseSubscription.getUrn(), VALIDATION_CASE_URN);
@@ -529,7 +546,7 @@ class SubscriptionTest extends IntegrationTestBase {
                 VALIDATION_SUBSCRIPTION_LIST
             );
 
-            CaseSubscription caseSubscription = userSubscriptions.getCaseSubscriptions().get(0);
+            CaseSubscription caseSubscription = userSubscriptions.getCaseSubscriptions().getFirst();
             assertEquals(CASE_NAME, caseSubscription.getCaseName(), VALIDATION_CASE_NAME);
             assertEquals(CASE_ID, caseSubscription.getCaseNumber(), VALIDATION_CASE_ID);
             assertEquals(CASE_URN, caseSubscription.getUrn(), VALIDATION_CASE_URN);
@@ -548,7 +565,7 @@ class SubscriptionTest extends IntegrationTestBase {
             assertEquals(0, userSubscriptions.getCaseSubscriptions().size(),
                          "Court subscription list contains unknown cases");
 
-            LocationSubscription location = userSubscriptions.getLocationSubscriptions().get(0);
+            LocationSubscription location = userSubscriptions.getLocationSubscriptions().getFirst();
             assertEquals(LOCATION_NAME, location.getLocationName(), VALIDATION_LOCATION_NAME);
             assertEquals(DATE_ADDED.withNano(0), location.getDateAdded().withNano(0),
                          VALIDATION_DATE_ADDED);
@@ -563,7 +580,7 @@ class SubscriptionTest extends IntegrationTestBase {
             assertEquals(0, userSubscriptions.getLocationSubscriptions().size(), VALIDATION_LOCATION_LIST);
             assertEquals(1, userSubscriptions.getCaseSubscriptions().size(), VALIDATION_ONE_CASE_LOCATION);
 
-            CaseSubscription caseSubscription = userSubscriptions.getCaseSubscriptions().get(0);
+            CaseSubscription caseSubscription = userSubscriptions.getCaseSubscriptions().getFirst();
             assertEquals(CASE_NAME, caseSubscription.getCaseName(), VALIDATION_CASE_NAME);
             assertEquals(SearchType.CASE_ID, caseSubscription.getSearchType(), VALIDATION_SEARCH_TYPE);
             assertEquals(CASE_ID, caseSubscription.getCaseNumber(), VALIDATION_CASE_ID);
@@ -579,7 +596,7 @@ class SubscriptionTest extends IntegrationTestBase {
             assertEquals(0, userSubscriptions.getLocationSubscriptions().size(), VALIDATION_LOCATION_LIST);
             assertEquals(1, userSubscriptions.getCaseSubscriptions().size(), VALIDATION_ONE_CASE_LOCATION);
 
-            CaseSubscription caseSubscription = userSubscriptions.getCaseSubscriptions().get(0);
+            CaseSubscription caseSubscription = userSubscriptions.getCaseSubscriptions().getFirst();
             assertEquals(CASE_NAME, caseSubscription.getCaseName(), VALIDATION_CASE_NAME);
             assertEquals(SearchType.CASE_URN, caseSubscription.getSearchType(), VALIDATION_SEARCH_TYPE);
             assertEquals(CASE_ID, caseSubscription.getCaseNumber(), VALIDATION_CASE_ID);
@@ -596,11 +613,14 @@ class SubscriptionTest extends IntegrationTestBase {
         @Test
         @WithMockUser(username = "unauthorized_find_by_user_id", authorities = {"APPROLE_unknown.find"})
         void testUnauthorizedFindByUserId() throws Exception {
-            assertRequestResponseStatus(mvc, get(SUBSCRIPTION_USER_PATH), FORBIDDEN.value());
+            when(subscriptionAuthorisationService.userCanViewSubscriptions(any(), any())).thenReturn(false);
+            assertRequestResponseStatus(mvc, get(SUBSCRIPTION_USER_PATH)
+                .header(REQUESTER_ID_HEADER, ACTIONING_USER_ID), FORBIDDEN.value());
         }
 
         private UserSubscription getUserSubscriptions() throws Exception {
-            MvcResult response = mvc.perform(get(SUBSCRIPTION_USER_PATH))
+            MvcResult response = mvc.perform(get(SUBSCRIPTION_USER_PATH)
+                                                 .header(REQUESTER_ID_HEADER, ACTIONING_USER_ID))
                 .andExpect(status().isOk())
                 .andReturn();
 
@@ -622,13 +642,13 @@ class SubscriptionTest extends IntegrationTestBase {
 
         @Test
         void testBuildSubscriberListCaseUrnNull() throws Exception {
-            mvc.perform(setupMockSubscription(CASE_ID, SearchType.CASE_ID, VALID_USER_ID, CASE_ID, null));
+            mvc.perform(setupMockSubscription(CASE_ID, SearchType.CASE_ID, VALID_USER_ID));
             assertAcceptedArtefactRecipientRequest();
         }
 
         @Test
         void testBuildSubscriberListCaseNumberNull() throws Exception {
-            mvc.perform(setupMockSubscription(CASE_ID, SearchType.CASE_ID, VALID_USER_ID, null, CASE_URN));
+            mvc.perform(setupMockSubscription(CASE_ID, SearchType.CASE_ID, VALID_USER_ID));
             assertAcceptedArtefactRecipientRequest();
         }
 
